tests/ui/option_ext.stderr
warning: panic message is not a string literal
   --> src/lib.rs
    |
    |     panic!(AbortNow)
    |     ------ ^^^^^^^^
    |     |
    |     help: use std::panic::panic_any instead: `std::panic::panic_any`
    |
    = note: `#[warn(non_fmt_panics)]` on by default
    = note: this usage of panic!() is deprecated; it will be a hard error in Rust 2021
    = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/panic-macro-consistency.html>

error: Option::expect_or_abort() test
 --> tests/ui/option_ext.rs:4:1
  |
4 | option_ext!(one, two);
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `option_ext` (in Nightly builds, run with -Z macro-backtrace for more info)
